@@ -1,6 +1,3 @@
-import java.text.SimpleDateFormat
-import java.util.*
-
 buildscript {
     dependencies {
         classpath("org.jsonschema2pojo:jsonschema2pojo-gradle-plugin:1.2.2")
@@ -14,6 +11,7 @@ plugins {
     id 'org.springframework.boot' version '3.4.3'
     id 'io.spring.dependency-management' version '1.1.7'
     id 'org.sonarqube' version '5.1.0.4882'
+    id 'jacoco'
 }
 
 apply plugin: 'jsonschema2pojo'
@@ -94,6 +92,20 @@ dependencyManagement {
     }
 }
 
+jacocoTestReport {
+    dependsOn test
+    reports {
+        xml.required = true
+    }
+}
+
 tasks.named("test") {
     useJUnitPlatform()
+}
+
+test {
+    finalizedBy jacocoTestReport
+    jvmArgs(
+            "--add-opens", "java.base/java.lang=ALL-UNNAMED"
+    )
 }
